@@ -1685,8 +1685,7 @@ function wfIsWellFormedXml( $text ) {
  */
 function wfIsWellFormedXmlFragment( $text ) {
 	$html =
-		'<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" ' .
-		'"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">' .
+		Sanitizer::hackDocType() .
 		'<html>' .
 		$text .
 		'</html>';
